@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.21 version.
 
 0.03 2023-01-25T08:40:57+01:00
  - Fix test dependencies.
